# Cpp-Training

./: CMakeLists.txt  README.md  main.cpp
libs/: CMakeLists.txt  ISendFrame.h  ProcessBlur.cpp  ProcessBlur.h  SendToDisk.cpp  SendToWindow.cpp  SendToWindow.h
libs/ProcessFrame/: CMakeLists.txt  IProcessFrame.h  Process2Gray.cpp  Process2Gray.h  ProcessFaceDetect.cpp  ProcessFaceDetect.h
libs/SendFrame/: CMakeLists.txt  ISendFrame.h  SendToDisk.h
